# heap-allocator-workshop

./: .clang-format  .clang-tidy  .gitignore  .obsidian.vimrc  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Makefile  README.md
.obsidian/: appearance.json
docs/: allocators.md  list_segregated.md  programs.md  rbtree_analysis.md  rbtree_basics.md  rbtree_clrs.md  rbtree_linked.md  rbtree_stack.md  rbtree_topdown.md  rbtree_unified.md  readme.md  runtime_analysis.md  splaytree_stack.md  splaytree_topdown.md
etc/: cflags.cmake  scanners.cmake
lib/: CMakeLists.txt  allocator.h  debug_break.h  libc_default.c  list_addressorder_utilities.h  list_bestfit_utilities.h  list_segregated.c  list_segregated_algorithm.c  list_segregated_utilities.h  print_utility.c  print_utility.h  rbtree_clrs.c  rbtree_clrs_algorithm.c  rbtree_clrs_utilities.h  rbtree_linked.c  rbtree_linked_algorithm.c  rbtree_linked_utilities.h  rbtree_stack.c  rbtree_stack_algorithm.c  rbtree_stack_utilities.h  rbtree_topdown.c  rbtree_topdown_algorithm.c  rbtree_topdown_utilities.h  rbtree_unified.c  rbtree_unified_algorithm.c  rbtree_unified_utilities.h  readme.md  script.c  script.h  segment.c  segment.h  splaytree.c  splaytree_stack.c  splaytree_topdown.c
lib/designs/: CMakeLists.txt  list_addressorder_design.c  list_bestfit_design.c  rbtree_clrs_design.c  rbtree_clrs_design.h  rbtree_linked_design.c  rbtree_linked_design.h  rbtree_unified_design.c  rbtree_unified_design.h
lib/printers/: CMakeLists.txt  list_bestfit_printer.c  list_segregated_printer.c  list_segregated_printer.h  print_utility.c  print_utility.h  rbtree_clrs_printer.c  rbtree_clrs_printer.h  rbtree_linked_printer.c  rbtree_stack_printer.c  rbtree_stack_printer.h  rbtree_topdown_printer.c  rbtree_topdown_printer.h  rbtree_unified_printer.c  rbtree_unified_printer.h  readme.md
lib/tests/: CMakeLists.txt  debug_break.c  debug_break.h  list_segregated_tests.c  rbtree_clrs_tests.c  rbtree_clrs_tests.h  rbtree_linked_tests.c  rbtree_stack_tests.c  rbtree_topdown_tests.c  rbtree_topdown_tests.h  rbtree_unified_tests.c  rbtree_unified_tests.h  readme.md
lib/utilities/: CMakeLists.txt  debug_break.h  list_addressorder_printer.c  list_addressorder_tests.c  list_bestfit_printer.c  list_bestfit_tests.c  list_segregated_printer.c  list_segregated_tests.c  list_segregated_utilities.c  list_segregated_utilities.h  print_utility.c  print_utility.h  rbtree_clrs_printer.c  rbtree_clrs_tests.c  rbtree_clrs_utilities.c  rbtree_clrs_utilities.h  rbtree_linked_printer.c  rbtree_linked_tests.c  rbtree_linked_utilities.c  rbtree_linked_utilities.h  rbtree_stack_printer.c  rbtree_stack_tests.c  rbtree_stack_utilities.c  rbtree_stack_utilities.h  rbtree_topdown_printer.c  rbtree_topdown_tests.c  rbtree_topdown_utilities.c  rbtree_topdown_utilities.h  rbtree_unified_printer.c  rbtree_unified_tests.c  rbtree_unified_utilities.c  rbtree_unified_utilities.h  readme.md
lib/utility/: CMakeLists.txt  debug_break.c  list_addressorder_design.c  list_addressorder_design.h  list_addressorder_printer.c  list_addressorder_printer.h  list_addressorder_tests.c  list_addressorder_tests.h  list_addressorder_utility.c  list_addressorder_utility.h  list_bestfit_design.c  list_bestfit_design.h  list_bestfit_printer.c  list_bestfit_printer.h  list_bestfit_tests.c  list_bestfit_tests.h  list_bestfit_utility.c  list_bestfit_utility.h  list_segregated_design.c  list_segregated_design.h  list_segregated_printer.c  list_segregated_printer.h  list_segregated_tests.c  list_segregated_tests.h  list_segregated_utility.c  list_segregated_utility.h  list_utility.c  list_utility.h  print_utility.h  rbtree_clrs_design.c  rbtree_clrs_design.h  rbtree_clrs_printer.c  rbtree_clrs_printer.h  rbtree_clrs_tests.h  rbtree_clrs_utility.c  rbtree_clrs_utility.h  rbtree_linked_design.c  rbtree_linked_design.h  rbtree_linked_printer.c  rbtree_linked_printer.h  (+23 more)
output/: readme.md
pysrc/: parsing.py  readme.md  script-commands.txt  trace_parsing.py
pysrc/ltrace-output/: readme.md
pysrc/parsed-scripts/: generated1.script  parsed1.script  script-commands.txt
scripts/: 00-test-realloc.script  example1-multimalloc.script  example2-freeandcoalesce.script  example3-realloc.script  example4-allocrealloc.script  example5-reallocupdown.script  example6leftrealloc.script  example7-mixed.script  example8-minimixed.script  example9-unknown.script  exampleA-deleteerror.script  exampleB-realloc.script  exampleC-doublecoalesce.script  exampleD-duplicates.script  leak-time-01kinsertdelete.script  leak-time-02kinsertdelete.script  leak-time-04kinsertdelete.script  leak-time-06kinsertdelete.script  leak-time-08kinsertdelete.script  leak-time-10kinsertdelete.script  leak-time-12kinsertdelete.script  leak-time-14kinsertdelete.script  leak-time-16kinsertdelete.script  leak-time-18kinsertdelete.script  leak-time-20kinsertdelete.script  readme.md  trace-tree.script
src/: '  .gdbinit  CMakeLists.txt  Makefile  allocator.h  data.temp  debug_break.h  explicit_tree_clrs.c  explicit_tree_unified.c  explicit_tree_unified_doubly.c  explicit_tree_unified_stack.c  explicit_tree_unified_topdown.c  list_segregated.c  my_optional_program.c  my_optional_program_explicit_tree_clrs  my_optional_program_explicit_tree_unified  my_optional_program_explicit_tree_unified_doubly  my_optional_program_explicit_tree_unified_stack  my_optional_program_explicit_tree_unified_topdown  print_peaks.c  rbtree_clrs.c  rbtree_linked.c  rbtree_stack.c  rbtree_topdown.c  rbtree_unified.c  readme.md  sandbox.c  script.c  script.h  segment.h  stats.c  test_explicit_tree_clrs  test_explicit_tree_unified  test_explicit_tree_unified_doubly  test_explicit_tree_unified_stack  test_explicit_tree_unified_topdown  test_harness.c  time-commands.txt  time_harness.c
tests/: CMakeLists.txt  command_queue.hh  ctest.cc  gtest.cc  gtest_generic.cc  heap_tests.cc  osync.cc  osync.hh  peaks.cc  perf.cc  plot.cc  print_peaks.cc  script.cc  script.hh  stats.cc  time-commands.txt
